# skifreewasm

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: static.yml
docs/: skifree.data
include/: game.hpp  hud.hpp  obstacle.hpp  player.hpp  spritesheet.hpp
src/: game.cpp  hud.cpp  main.cpp  obstacle.cpp  player.cpp  spritesheet.cpp
web/: index.html  skifree.html  skifree.js  skifree.wasm
